kubernetes/catalog/lidarr/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/rroller/unraid-templates/master/ronnieroller.com/lidarr.xml
# Category: Downloaders, MediaApp-Music
# Stars: 11 | Downloads: 4452408
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: lidarr
  labels:
    app.kubernetes.io/name: lidarr
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: lidarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lidarr
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: lidarr
          image: volikon/lidarr
          # No environment variables defined
          ports:
            - containerPort: 8686
              protocol: TCP
              name: host-port-1
          startupProbe:
            tcpSocket:
              port: 8686
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 120
          readinessProbe:
            tcpSocket:
              port: 8686
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 8686
            periodSeconds: 30
            failureThreshold: 3
          volumeMounts:
            - name: lidarr-data-0
              mountPath: "/config"
            - name: tmp-data
              mountPath: "/data"
            - name: tmp-music
              mountPath: "/music"
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
      - name: lidarr-data-0
        persistentVolumeClaim:
          claimName: lidarr-data-0
      - name: tmp-data
        emptyDir:
      - name: tmp-music
        emptyDir:
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: lidarr
  labels:
    app.kubernetes.io/name: lidarr
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: lidarr
  ports:
    - port: 8686
      targetPort: 8686
      protocol: TCP
      name: host-port-1
  type: ClusterIP
