kubernetes/catalog/lidarr/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr
  namespace: lidarr
  labels:
    app.kubernetes.io/name: lidarr
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lidarr.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: lidarr
          port: 8686
  tls:
    secretName: int-rlservers-com-tls
